test/deploy/dvo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-allow-from-openshift-managed-upgrade-operator
  namespace: openshift-deployment-validation-operator
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test-managed-upgrade-operator
  podSelector: {}
  policyTypes:
  - Ingress
