test/deploy/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-managed-upgrade-operator
  labels:
    openshift.io/cluster-monitoring: "true"
